--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -18,19 +18,23 @@ jobs:
           terraform_version: 1.3.0
 
       - name: Terraform fmt
+        working-directory: ./terraform
         id: fmt
         run: terraform fmt
         continue-on-error: true
 
       - name: Terraform Init
+        working-directory: ./terraform
         id: init
         run: terraform init
 
       - name: Terraform Validate
+        working-directory: ./terraform
         id: validate
         run: terraform validate
 
       - name: Terraform Plan
+        working-directory: ./terraform
         id: plan
         run: terraform plan
         continue-on-error: true
