--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -9,6 +9,9 @@ jobs:
   terraform:
     name: Terraform-plan
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -37,7 +40,7 @@ jobs:
       - name: Terraform Plan
         working-directory: ./terraform
         id: plan
-        run: terraform plan -var AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} -var AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: terraform plan
         continue-on-error: false
 
       - run: echo ${{ steps.plan.outputs.stdout }}
