--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -5,13 +5,15 @@ on:
     branches:
       - plan
 
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 jobs:
   terraform:
     name: Terraform-plan
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -40,7 +42,7 @@ jobs:
       - name: Terraform Plan
         working-directory: ./terraform
         id: plan
-        run: terraform plan
+        run: terraform plan -var $AWS_ACCESS_KEY_ID -var $AWS_SECRET_ACCESS_KEY
         continue-on-error: false
 
       - run: echo ${{ steps.plan.outputs.stdout }}
