--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -43,7 +43,7 @@ jobs:
         working-directory: ./terraform
         id: plan
         #run: terraform plan -var="$AWS_ACCESS_KEY_ID" -var="$AWS_SECRET_ACCESS_KEY"
-        run: terraform plan -var AWS_ACCESS_KEY_ID="${{AWS_ACCESS_KEY_ID}}" -var AWS_SECRET_ACCESS_KEY="${{AWS_SECRET_ACCESS_KEY}}"
+        run: terraform plan -var AWS_ACCESS_KEY_ID="${{secrets.AWS_ACCESS_KEY_ID}}" -var AWS_SECRET_ACCESS_KEY="${{secrets.AWS_SECRET_ACCESS_KEY}}"
         continue-on-error: false
 
       - run: echo ${{ steps.plan.outputs.stdout }}
