--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -5,9 +5,7 @@ on:
     branches:
       - plan
 
-env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 
 jobs:
   terraform:
@@ -41,9 +39,13 @@ jobs:
 
       - name: Terraform Plan
         working-directory: ./terraform
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         id: plan
         #run: terraform plan -var="$AWS_ACCESS_KEY_ID" -var="$AWS_SECRET_ACCESS_KEY"
-        run: terraform plan -var AWS_ACCESS_KEY_ID="${{secrets.AWS_ACCESS_KEY_ID}}" -var AWS_SECRET_ACCESS_KEY="${{secrets.AWS_SECRET_ACCESS_KEY}}"
+        #run: terraform plan -var AWS_ACCESS_KEY_ID="${{secrets.AWS_ACCESS_KEY_ID}}" -var AWS_SECRET_ACCESS_KEY="${{secrets.AWS_SECRET_ACCESS_KEY}}"
+        run: terraform plan
         continue-on-error: false
 
       - run: echo ${{ steps.plan.outputs.stdout }}
