--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -45,7 +45,8 @@ jobs:
         id: plan
         #run: terraform plan -var="$AWS_ACCESS_KEY_ID" -var="$AWS_SECRET_ACCESS_KEY"
         #run: terraform plan -var="AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}" -var="AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}"
-        run: terraform plan
+        #run: terraform plan
+        run: terraform plan -var="TF_VARS_AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}" -var="TF_VARS_AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}"
         continue-on-error: false
 
       - run: echo ${{ steps.plan.outputs.stdout }}
