--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -16,13 +16,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: '${{ secrets.AWS_ACCESS_KEY_ID }}'
-          aws-secret-access-key: '${{ secrets.AWS_SECRET_ACCESS_KEY }}'
-          aws-region: us-east-1
-
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v1
         with:
@@ -45,10 +38,9 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
-        working-directory: ./terraform
         id: plan
-        run: terraform plan
-        continue-on-error: false
+        run: terraform plan -no-color -var TF_VAR_AWS_ACCESS_KEY_ID="${{secrets.AWS_ACCESS_KEY_ID}}" -var TF_VAR_AWS_SECRET_ACCESS_KEY="${{secrets.AWS_SECRET_ACCESS_KEY}}"
+        continue-on-error: true
 
       - run: echo ${{ steps.plan.outputs.stdout }}
       - run: echo ${{ steps.plan.outputs.stderr }}
