--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -38,6 +38,7 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
+        working-directory: ./terraform
         id: plan
         run: terraform plan -no-color -var TF_VAR_AWS_ACCESS_KEY_ID="${{secrets.AWS_ACCESS_KEY_ID}}" -var TF_VAR_AWS_SECRET_ACCESS_KEY="${{secrets.AWS_SECRET_ACCESS_KEY}}"
         continue-on-error: true
