--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -40,10 +40,6 @@ jobs:
       - name: Terraform Plan
         working-directory: ./terraform
         id: plan
-        run: terraform plan -no-color -var="AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}" -var="AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}"
+        run: terraform plan -no-color -var="AWS_ACCESS_KEY_ID="${{secrets.AWS_ACCESS_KEY_ID}}"" -var="AWS_SECRET_ACCESS_KEY="${{secrets.AWS_SECRET_ACCESS_KEY}}""
         continue-on-error: false
-
-      - run: echo ${{ steps.plan.outputs.stdout }}
-      - run: echo ${{ steps.plan.outputs.stderr }}
-      - run: echo ${{ steps.plan.outputs.exitcode }}
         
