--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - plan
 
-
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
 
 jobs:
   terraform:
@@ -40,6 +42,6 @@ jobs:
       - name: Terraform Plan
         working-directory: ./terraform
         id: plan
-        run: terraform plan -no-color -var="AWS_ACCESS_KEY_ID="${{secrets.AWS_ACCESS_KEY_ID}}"" -var="AWS_SECRET_ACCESS_KEY="${{secrets.AWS_SECRET_ACCESS_KEY}}""
+        run: terraform plan
         continue-on-error: false
         
