--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -6,8 +6,8 @@ on:
       - plan
 
 env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
+  TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
   terraform:
@@ -42,6 +42,6 @@ jobs:
       - name: Terraform Plan
         working-directory: ./terraform
         id: plan
-        run: terraform plan
+        run: terraform plan -input=false
         continue-on-error: false
         
