--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -9,6 +9,9 @@ jobs:
   terraform:
     name: Terraform-plan
     runs-on: ubuntu-latest
+    env:
+      TF_VAR_AWS_ACCESS_KEY_ID: ${{secrets.TF_VAR_AWS_ACCESS_KEY_ID}}
+      TF_VAR_AWS_SECRET_ACCESS_KEY: ${{secrets.TF_VAR_AWS_SECRET_ACCESS_KEY}}
     
     steps:
       - name: Checkout
@@ -18,13 +21,6 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.3.0
-      
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: us-east-1
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Terraform fmt
         working-directory: ./terraform
