--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -10,8 +10,8 @@ jobs:
     name: Terraform-plan
     runs-on: ubuntu-latest
     env:
-      TF_VAR_AWS_ACCESS_KEY_ID: ${{secrets.TF_VAR_AWS_ACCESS_KEY_ID}}
-      TF_VAR_AWS_SECRET_ACCESS_KEY: ${{secrets.TF_VAR_AWS_SECRET_ACCESS_KEY}}
+      AWS_ACCESS_KEY_ID: ${{secrets.TF_VAR_AWS_ACCESS_KEY_ID}}
+      AWS_SECRET_ACCESS_KEY: ${{secrets.TF_VAR_AWS_SECRET_ACCESS_KEY}}
     
     steps:
       - name: Checkout
