--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -9,9 +9,6 @@ jobs:
   terraform:
     name: Terraform-plan
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{secrets.TF_VAR_AWS_ACCESS_KEY_ID}}
-      AWS_SECRET_ACCESS_KEY: ${{secrets.TF_VAR_AWS_SECRET_ACCESS_KEY}}
     
     steps:
       - name: Checkout
@@ -41,6 +38,9 @@ jobs:
       - name: Terraform Plan
         working-directory: ./terraform
         id: plan
-        run: terraform plan -input=false -var="AWS_ACCESS_KEY_ID=${{secrets.TF_VAR_AWS_ACCESS_KEY_ID}}" -var="AWS_SECRET_ACCESS_KEY=${{secrets.TF_VAR_AWS_SECRET_ACCESS_KEY}}"
+        env:
+          AWS_ACCESS_KEY_ID: ${{secrets.TF_VAR_AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{secrets.TF_VAR_AWS_SECRET_ACCESS_KEY}}
+        run: terraform plan -input=false
         continue-on-error: false
         
