--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -42,6 +42,6 @@ jobs:
         env:
           access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: terraform plan -input=false
+        run: terraform plan
         continue-on-error: false
         
