--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Terraform fmt
         working-directory: ./terraform
         id: fmt
-        run: terraform fmt
+        run: terraform fmt -check
         continue-on-error: true
 
       - name: Terraform Init
@@ -35,16 +35,17 @@ jobs:
       - name: Terraform Validate
         working-directory: ./terraform
         id: validate
-        run: terraform validate
+        run: terraform validate -no-color
 
       - name: Terraform Plan
         working-directory: ./terraform
         id: plan
+        if: github.event_name == 'pull_request'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: terraform plan -input=false -no-color
-        continue-on-error: false
+        continue-on-error: true
 
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
