--- a/.github/workflows/TF_workflow.yml
+++ b/.github/workflows/TF_workflow.yml
@@ -77,3 +77,7 @@ jobs:
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
+
+#      - name: Terraform Apply
+#        if: github.ref == 'refs/heads/main' && github.event_name == 'merge'
+#        run: terraform apply -auto-approve -input=false
